// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavigationBar /> Snapshot should render multiple left items 1`] = `
.ouflex {
  display: flex;
  flex-basis: 56px;
  flex-grow: 0;
  flex-shrink: 0;
  flex-direction: row;
  flex-wrap: undefined;
  align-items: stretch;
  justify-content: flex-start;
  max-width: 100vw;
  width: 100%;
  height: undefined;
  position: relative;
  background-color: undefined;
  overflow: undefined;
}

.ou {
  display: flex;
  position: absolute;
  top: 24px;
  bottom: 8px;
  left: 48px;
  right: 48px;
  flex-basis: auto;
  flex-grow: 0;
  flex-shrink: 1;
  flex-direction: row;
  align-items: stretch;
  justify-content: center;
  background-color: undefined;
  z-index: 1;
  height: undefined;
  width: undefined;
}

.text-textStyle {
  color: #121212;
  font-size: 20px;
  font-weight: 900;
  font-family: Lato, sans-serif;
  display: inline;
  white-space: inherit;
  text-align: center;
}

.ou {
  display: flex;
  position: absolute;
  top: 16px;
  bottom: 8px;
  left: 16px;
  right: undefined;
  flex-basis: auto;
  flex-grow: 0;
  flex-shrink: 1;
  flex-direction: row;
  align-items: flex-end;
  justify-content: flex-start;
  background-color: undefined;
  z-index: 1;
  height: undefined;
  width: undefined;
}

.oustack {
  display: flex;
  flex-basis: auto;
  flex-grow: 0;
  flex-shrink: 1;
  flex-direction: row;
  align-items: stretch;
  justify-content: flex-start;
  background-color: undefined;
  height: undefined;
  width: undefined;
  max-width: undefined;
  overflow: undefined;
}

.oredibs-uclickableopacity {
  width: 100%;
  display: inline-block;
  cursor: pointer;
}

.text-textStyle {
  color: #00A87E;
  font-size: 16px;
  font-weight: bold;
  font-family: Lato, sans-serif;
  display: inline;
  white-space: inherit;
  text-align: undefined;
}

.text-textStyle:hover {
  cursor: pointer;
}

.root {
  height: undefined;
  width: 8px;
  display: inline-block;
}

<div
  className="ouflex"
>
  <div
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 0,
      }
    }
    type="primary"
  />
  <div
    className="ou"
  >
    <div
      className="text-textStyle"
    >
      Page title
    </div>
  </div>
  <div
    className="ou"
  >
    <div
      className="oustack"
    >
      <div
        className="oredibs-uclickableopacity"
        data-test-id="redibs-ucl.navigation-bar-item.0"
        onClick={[Function]}
        style={
          Object {
            "alignItems": "flex-end",
            "flexDirection": "row",
            "height": 40,
            "minWidth": 40,
          }
        }
      >
        <div
          className="text-textStyle"
        >
          Left1
        </div>
      </div>
      <div
        className="root"
      />
      <div
        className="oredibs-uclickableopacity"
        data-test-id="redibs-ucl.navigation-bar-item.1"
        onClick={[Function]}
        style={
          Object {
            "alignItems": "flex-end",
            "flexDirection": "row",
            "height": 40,
            "minWidth": 40,
          }
        }
      >
        <div
          className="text-textStyle"
        >
          Left2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<NavigationBar /> Snapshot should render multiple left items with icon 1`] = `
.ouflex {
  display: flex;
  flex-basis: 56px;
  flex-grow: 0;
  flex-shrink: 0;
  flex-direction: row;
  flex-wrap: undefined;
  align-items: stretch;
  justify-content: flex-start;
  max-width: 100vw;
  width: 100%;
  height: undefined;
  position: relative;
  background-color: undefined;
  overflow: undefined;
}

.ou {
  display: flex;
  position: absolute;
  top: 24px;
  bottom: 8px;
  left: 48px;
  right: 48px;
  flex-basis: auto;
  flex-grow: 0;
  flex-shrink: 1;
  flex-direction: row;
  align-items: stretch;
  justify-content: center;
  background-color: undefined;
  z-index: 1;
  height: undefined;
  width: undefined;
}

.text-textStyle {
  color: #121212;
  font-size: 20px;
  font-weight: 900;
  font-family: Lato, sans-serif;
  display: inline;
  white-space: inherit;
  text-align: center;
}

.ou {
  display: flex;
  position: absolute;
  top: 16px;
  bottom: 8px;
  left: 16px;
  right: undefined;
  flex-basis: auto;
  flex-grow: 0;
  flex-shrink: 1;
  flex-direction: row;
  align-items: flex-end;
  justify-content: flex-start;
  background-color: undefined;
  z-index: 1;
  height: undefined;
  width: undefined;
}

.oustack {
  display: flex;
  flex-basis: auto;
  flex-grow: 0;
  flex-shrink: 1;
  flex-direction: row;
  align-items: stretch;
  justify-content: flex-start;
  background-color: undefined;
  height: undefined;
  width: undefined;
  max-width: undefined;
  overflow: undefined;
}

.oredibs-uclickableopacity {
  width: 100%;
  display: inline-block;
  cursor: pointer;
}

.text-textStyle {
  color: #00A87E;
  font-size: 16px;
  font-weight: bold;
  font-family: Lato, sans-serif;
  display: inline;
  white-space: inherit;
  text-align: undefined;
}

.text-textStyle:hover {
  cursor: pointer;
}

.root {
  height: undefined;
  width: 8px;
  display: inline-block;
}

<div
  className="ouflex"
>
  <div
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 0,
      }
    }
    type="primary"
  />
  <div
    className="ou"
  >
    <div
      className="text-textStyle"
    >
      Page title
    </div>
  </div>
  <div
    className="ou"
  >
    <div
      className="oustack"
    >
      <div
        className="oredibs-uclickableopacity"
        data-test-id="redibs-ucl.navigation-bar-item.0"
        onClick={[Function]}
        style={
          Object {
            "alignItems": "flex-end",
            "flexDirection": "row",
            "height": 40,
            "minWidth": 40,
          }
        }
      >
        <div
          className="text-textStyle"
        >
          Left1
        </div>
      </div>
      <div
        className="root"
      />
      <div
        className="oredibs-uclickableopacity"
        data-test-id="redibs-ucl.navigation-bar-item.1"
        onClick={[Function]}
        style={
          Object {
            "alignItems": "flex-end",
            "flexDirection": "row",
            "height": 40,
            "minWidth": 40,
          }
        }
      >
        <location-fill-pin.svg
          alwaysdark="#121212"
          alwayslight="#FFFFFF"
          basalt="#8A8A8A"
          crystal="#FFFFFF"
          crystalhover="#F7F7F7"
          crystalpressed="#EEEEEE"
          disabled="#FAFAFA"
          glacialblue="#3D98D2"
          granite="#ABABAB"
          height={24}
          larchyellow="#F4BE19"
          larchyellowhover="#F5D624"
          larchyellowpressed="#F3A70C"
          limestone="#E2E2E2"
          limestonehover="#EEEEEE"
          limestonepressed="#D0D0D0"
          obsidian="#121212"
          overlay="rgba(18,18,18,0.3)"
          paintbrushred="#E05666"
          palousegreen="#00A87E"
          palousegreenhighlight="#DEF3EC"
          palousegreenhover="#43B893"
          palousegreenpressed="#00986A"
          quartz="#FAFAFA"
          tintcolor="#00A87E"
          width={24}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<NavigationBar /> Snapshot should render multiple right items 1`] = `
.ouflex {
  display: flex;
  flex-basis: 56px;
  flex-grow: 0;
  flex-shrink: 0;
  flex-direction: row;
  flex-wrap: undefined;
  align-items: stretch;
  justify-content: flex-start;
  max-width: 100vw;
  width: 100%;
  height: undefined;
  position: relative;
  background-color: undefined;
  overflow: undefined;
}

.ou {
  display: flex;
  position: absolute;
  top: 24px;
  bottom: 8px;
  left: 48px;
  right: 48px;
  flex-basis: auto;
  flex-grow: 0;
  flex-shrink: 1;
  flex-direction: row;
  align-items: stretch;
  justify-content: center;
  background-color: undefined;
  z-index: 1;
  height: undefined;
  width: undefined;
}

.text-textStyle {
  color: #121212;
  font-size: 20px;
  font-weight: 900;
  font-family: Lato, sans-serif;
  display: inline;
  white-space: inherit;
  text-align: center;
}

.oustack {
  display: flex;
  flex-basis: auto;
  flex-grow: 0;
  flex-shrink: 1;
  flex-direction: row;
  align-items: stretch;
  justify-content: flex-start;
  background-color: undefined;
  height: undefined;
  width: undefined;
  max-width: undefined;
  overflow: undefined;
}

.oredibs-uclickableopacity {
  width: 100%;
  display: inline-block;
  cursor: pointer;
}

.text-textStyle {
  color: #00A87E;
  font-size: 16px;
  font-weight: bold;
  font-family: Lato, sans-serif;
  display: inline;
  white-space: inherit;
  text-align: undefined;
}

.text-textStyle:hover {
  cursor: pointer;
}

.root {
  height: undefined;
  width: 8px;
  display: inline-block;
}

.ou {
  display: flex;
  position: absolute;
  top: 16px;
  bottom: 8px;
  left: undefined;
  right: 16px;
  flex-basis: auto;
  flex-grow: 0;
  flex-shrink: 1;
  flex-direction: row-reverse;
  align-items: flex-end;
  justify-content: flex-start;
  background-color: undefined;
  z-index: 1;
  height: undefined;
  width: undefined;
}

<div
  className="ouflex"
>
  <div
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 0,
      }
    }
    type="primary"
  />
  <div
    className="ou"
  >
    <div
      className="text-textStyle"
    >
      Page title
    </div>
  </div>
  <div
    className="ou"
  >
    <div
      className="oustack"
    >
      <div
        className="oredibs-uclickableopacity"
        data-test-id="redibs-ucl.navigation-bar-item.0"
        onClick={[Function]}
        style={
          Object {
            "alignItems": "flex-end",
            "flexDirection": "row-reverse",
            "height": 40,
            "minWidth": 40,
          }
        }
      >
        <div
          className="text-textStyle"
        >
          Right1
        </div>
      </div>
      <div
        className="root"
      />
      <div
        className="oredibs-uclickableopacity"
        data-test-id="redibs-ucl.navigation-bar-item.1"
        onClick={[Function]}
        style={
          Object {
            "alignItems": "flex-end",
            "flexDirection": "row-reverse",
            "height": 40,
            "minWidth": 40,
          }
        }
      >
        <div
          className="text-textStyle"
        >
          Right2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<NavigationBar /> Snapshot should render multiple right items with icons 1`] = `
.ouflex {
  display: flex;
  flex-basis: 56px;
  flex-grow: 0;
  flex-shrink: 0;
  flex-direction: row;
  flex-wrap: undefined;
  align-items: stretch;
  justify-content: flex-start;
  max-width: 100vw;
  width: 100%;
  height: undefined;
  position: relative;
  background-color: undefined;
  overflow: undefined;
}

.ou {
  display: flex;
  position: absolute;
  top: 24px;
  bottom: 8px;
  left: 48px;
  right: 48px;
  flex-basis: auto;
  flex-grow: 0;
  flex-shrink: 1;
  flex-direction: row;
  align-items: stretch;
  justify-content: center;
  background-color: undefined;
  z-index: 1;
  height: undefined;
  width: undefined;
}

.text-textStyle {
  color: #121212;
  font-size: 20px;
  font-weight: 900;
  font-family: Lato, sans-serif;
  display: inline;
  white-space: inherit;
  text-align: center;
}

.oustack {
  display: flex;
  flex-basis: auto;
  flex-grow: 0;
  flex-shrink: 1;
  flex-direction: row;
  align-items: stretch;
  justify-content: flex-start;
  background-color: undefined;
  height: undefined;
  width: undefined;
  max-width: undefined;
  overflow: undefined;
}

.oredibs-uclickableopacity {
  width: 100%;
  display: inline-block;
  cursor: pointer;
}

.text-textStyle {
  color: #00A87E;
  font-size: 16px;
  font-weight: bold;
  font-family: Lato, sans-serif;
  display: inline;
  white-space: inherit;
  text-align: undefined;
}

.text-textStyle:hover {
  cursor: pointer;
}

.root {
  height: undefined;
  width: 8px;
  display: inline-block;
}

.ou {
  display: flex;
  position: absolute;
  top: 16px;
  bottom: 8px;
  left: undefined;
  right: 16px;
  flex-basis: auto;
  flex-grow: 0;
  flex-shrink: 1;
  flex-direction: row-reverse;
  align-items: flex-end;
  justify-content: flex-start;
  background-color: undefined;
  z-index: 1;
  height: undefined;
  width: undefined;
}

<div
  className="ouflex"
>
  <div
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 0,
      }
    }
    type="primary"
  />
  <div
    className="ou"
  >
    <div
      className="text-textStyle"
    >
      Page title
    </div>
  </div>
  <div
    className="ou"
  >
    <div
      className="oustack"
    >
      <div
        className="oredibs-uclickableopacity"
        data-test-id="redibs-ucl.navigation-bar-item.0"
        onClick={[Function]}
        style={
          Object {
            "alignItems": "flex-end",
            "flexDirection": "row-reverse",
            "height": 40,
            "minWidth": 40,
          }
        }
      >
        <div
          className="text-textStyle"
        >
          Right1
        </div>
      </div>
      <div
        className="root"
      />
      <div
        className="oredibs-uclickableopacity"
        data-test-id="redibs-ucl.navigation-bar-item.1"
        onClick={[Function]}
        style={
          Object {
            "alignItems": "flex-end",
            "flexDirection": "row-reverse",
            "height": 40,
            "minWidth": 40,
          }
        }
      >
        <location-fill-pin.svg
          alwaysdark="#121212"
          alwayslight="#FFFFFF"
          basalt="#8A8A8A"
          crystal="#FFFFFF"
          crystalhover="#F7F7F7"
          crystalpressed="#EEEEEE"
          disabled="#FAFAFA"
          glacialblue="#3D98D2"
          granite="#ABABAB"
          height={24}
          larchyellow="#F4BE19"
          larchyellowhover="#F5D624"
          larchyellowpressed="#F3A70C"
          limestone="#E2E2E2"
          limestonehover="#EEEEEE"
          limestonepressed="#D0D0D0"
          obsidian="#121212"
          overlay="rgba(18,18,18,0.3)"
          paintbrushred="#E05666"
          palousegreen="#00A87E"
          palousegreenhighlight="#DEF3EC"
          palousegreenhover="#43B893"
          palousegreenpressed="#00986A"
          quartz="#FAFAFA"
          tintcolor="#00A87E"
          width={24}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<NavigationBar /> Snapshot should render one left item 1`] = `
.ouflex {
  display: flex;
  flex-basis: 56px;
  flex-grow: 0;
  flex-shrink: 0;
  flex-direction: row;
  flex-wrap: undefined;
  align-items: stretch;
  justify-content: flex-start;
  max-width: 100vw;
  width: 100%;
  height: undefined;
  position: relative;
  background-color: undefined;
  overflow: undefined;
}

.ou {
  display: flex;
  position: absolute;
  top: 24px;
  bottom: 8px;
  left: 48px;
  right: 48px;
  flex-basis: auto;
  flex-grow: 0;
  flex-shrink: 1;
  flex-direction: row;
  align-items: stretch;
  justify-content: center;
  background-color: undefined;
  z-index: 1;
  height: undefined;
  width: undefined;
}

.text-textStyle {
  color: #121212;
  font-size: 20px;
  font-weight: 900;
  font-family: Lato, sans-serif;
  display: inline;
  white-space: inherit;
  text-align: center;
}

.ou {
  display: flex;
  position: absolute;
  top: 16px;
  bottom: 8px;
  left: 16px;
  right: undefined;
  flex-basis: auto;
  flex-grow: 0;
  flex-shrink: 1;
  flex-direction: row;
  align-items: flex-end;
  justify-content: flex-start;
  background-color: undefined;
  z-index: 1;
  height: undefined;
  width: undefined;
}

.oustack {
  display: flex;
  flex-basis: auto;
  flex-grow: 0;
  flex-shrink: 1;
  flex-direction: row;
  align-items: stretch;
  justify-content: flex-start;
  background-color: undefined;
  height: undefined;
  width: undefined;
  max-width: undefined;
  overflow: undefined;
}

.oredibs-uclickableopacity {
  width: 100%;
  display: inline-block;
  cursor: pointer;
}

.text-textStyle {
  color: #00A87E;
  font-size: 16px;
  font-weight: bold;
  font-family: Lato, sans-serif;
  display: inline;
  white-space: inherit;
  text-align: undefined;
}

.text-textStyle:hover {
  cursor: pointer;
}

<div
  className="ouflex"
>
  <div
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 0,
      }
    }
    type="primary"
  />
  <div
    className="ou"
  >
    <div
      className="text-textStyle"
    >
      Page title
    </div>
  </div>
  <div
    className="ou"
  >
    <div
      className="oustack"
    >
      <div
        className="oredibs-uclickableopacity"
        data-test-id="redibs-ucl.navigation-bar-item.0"
        onClick={[Function]}
        style={
          Object {
            "alignItems": "flex-end",
            "flexDirection": "row",
            "height": 40,
            "minWidth": 40,
          }
        }
      >
        <div
          className="text-textStyle"
        >
          Left1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<NavigationBar /> Snapshot should render one right item 1`] = `
.ouflex {
  display: flex;
  flex-basis: 56px;
  flex-grow: 0;
  flex-shrink: 0;
  flex-direction: row;
  flex-wrap: undefined;
  align-items: stretch;
  justify-content: flex-start;
  max-width: 100vw;
  width: 100%;
  height: undefined;
  position: relative;
  background-color: undefined;
  overflow: undefined;
}

.ou {
  display: flex;
  position: absolute;
  top: 24px;
  bottom: 8px;
  left: 48px;
  right: 48px;
  flex-basis: auto;
  flex-grow: 0;
  flex-shrink: 1;
  flex-direction: row;
  align-items: stretch;
  justify-content: center;
  background-color: undefined;
  z-index: 1;
  height: undefined;
  width: undefined;
}

.text-textStyle {
  color: #121212;
  font-size: 20px;
  font-weight: 900;
  font-family: Lato, sans-serif;
  display: inline;
  white-space: inherit;
  text-align: center;
}

.oustack {
  display: flex;
  flex-basis: auto;
  flex-grow: 0;
  flex-shrink: 1;
  flex-direction: row;
  align-items: stretch;
  justify-content: flex-start;
  background-color: undefined;
  height: undefined;
  width: undefined;
  max-width: undefined;
  overflow: undefined;
}

.oredibs-uclickableopacity {
  width: 100%;
  display: inline-block;
  cursor: pointer;
}

.text-textStyle {
  color: #00A87E;
  font-size: 16px;
  font-weight: bold;
  font-family: Lato, sans-serif;
  display: inline;
  white-space: inherit;
  text-align: undefined;
}

.text-textStyle:hover {
  cursor: pointer;
}

.ou {
  display: flex;
  position: absolute;
  top: 16px;
  bottom: 8px;
  left: undefined;
  right: 16px;
  flex-basis: auto;
  flex-grow: 0;
  flex-shrink: 1;
  flex-direction: row-reverse;
  align-items: flex-end;
  justify-content: flex-start;
  background-color: undefined;
  z-index: 1;
  height: undefined;
  width: undefined;
}

<div
  className="ouflex"
>
  <div
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 0,
      }
    }
    type="primary"
  />
  <div
    className="ou"
  >
    <div
      className="text-textStyle"
    >
      Page title
    </div>
  </div>
  <div
    className="ou"
  >
    <div
      className="oustack"
    >
      <div
        className="oredibs-uclickableopacity"
        data-test-id="redibs-ucl.navigation-bar-item.0"
        onClick={[Function]}
        style={
          Object {
            "alignItems": "flex-end",
            "flexDirection": "row-reverse",
            "height": 40,
            "minWidth": 40,
          }
        }
      >
        <div
          className="text-textStyle"
        >
          Right1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<NavigationBar /> Snapshot should render only a title 1`] = `
.ouflex {
  display: flex;
  flex-basis: 56px;
  flex-grow: 0;
  flex-shrink: 0;
  flex-direction: row;
  flex-wrap: undefined;
  align-items: stretch;
  justify-content: flex-start;
  max-width: 100vw;
  width: 100%;
  height: undefined;
  position: relative;
  background-color: undefined;
  overflow: undefined;
}

.ou {
  display: flex;
  position: absolute;
  top: 24px;
  bottom: 8px;
  left: 48px;
  right: 48px;
  flex-basis: auto;
  flex-grow: 0;
  flex-shrink: 1;
  flex-direction: row;
  align-items: stretch;
  justify-content: center;
  background-color: undefined;
  z-index: 1;
  height: undefined;
  width: undefined;
}

.text-textStyle {
  color: #121212;
  font-size: 20px;
  font-weight: 900;
  font-family: Lato, sans-serif;
  display: inline;
  white-space: inherit;
  text-align: center;
}

<div
  className="ouflex"
>
  <div
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 0,
      }
    }
    type="primary"
  />
  <div
    className="ou"
  >
    <div
      className="text-textStyle"
    >
      Page title
    </div>
  </div>
</div>
`;
